[fix] change side menu visibility to hidden at first-load

--- a/src/Navigation-SideMenu.css
+++ b/src/Navigation-SideMenu.css
@@ -1,5 +1,6 @@
 .project-side-menu-root {
   /* Layout */
+  visibility: hidden;
   position: absolute;
   top: 0px;
   left: 0px;
